# voice2cc

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  README.zh-CN.md  SECURITY.md  app.py  install.bat  pyproject.toml  pytest.ini  requirements.txt  start.bat  voice2cc.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  lint.yml  release.yml
build_tools/: build.bat  voice2ai.spec  voice2cc.spec
docs/: faq.md  getting-started.md  troubleshooting.md
src/voice2ai/: __init__.py  __main__.py  audio.py  autostart.py  config.py  diagnostics.py  hotkey.py  i18n.py  main.py  paste.py  vad.py
src/voice2ai/providers/: azure.py  base.py  groq.py  openai.py  siliconflow.py
src/voice2ai/ui/: floating.py  settings_dialog.py  tray.py  wizard.py
src/voice2cc/: __init__.py  __main__.py  audio.py  autostart.py  config.py  diagnostics.py  hotkey.py  i18n.py  main.py  paste.py  vad.py
src/voice2cc/providers/: __init__.py  azure.py  base.py  groq.py  openai.py  siliconflow.py
src/voice2cc/ui/: floating.py  settings_dialog.py  tray.py  wizard.py
tests/: test_audio_preroll.py  test_config.py  test_diagnostics.py  test_hotkey.py  test_i18n.py  test_paste.py  test_providers.py  test_vad.py
